# meals-mcp

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
meals_mcp/: main.py  models.py  server.py
meals_mcp/agents/: core.py  prompts.py
meals_mcp/utils/: notion.py
scripts/: add_meals.py  plan_week.py  setup.py
tests/: test_main.py  test_server.py
